--- a/src/App.scss
+++ b/src/App.scss
@@ -3,6 +3,9 @@
 .app-container {
     width: 100%;
     height: 100%;
+    min-width: $dim-width-min;
     max-width: $dim-width-max;
     max-height: $dim-height-max;
+    border: 1px solid #ccd0d9;
+    overflow-x: auto;
 }
