--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -2,6 +2,7 @@
 @import './color';
 @import './basic';
 @import './utility';
+@import './packages';
 @import './dimensions';
 @import 'bootstrap/dist/css/bootstrap.min.css';
 
