Add template: Header

--- a/src/shared/components/footer/Footer.scss
+++ b/src/shared/components/footer/Footer.scss
@@ -1,8 +1,8 @@
 @import '../../../assets/scss/styles.scss';
 
-.footer-menu {
+.footer {
     background-color: #f0f1f4;
-    .menu-item {
+    .menu {
         cursor: pointer;
         img {
             max-width: 18px;
