Update Some Styles

--- a/src/shared/components/header/Header.scss
+++ b/src/shared/components/header/Header.scss
@@ -5,6 +5,7 @@
 
     .info {
         p {
+            font-family: iranSansLight;
             padding: 0px 3px;
             direction: ltr;
             text-align: left;
