--- a/src/assets/scss/_basic.scss
+++ b/src/assets/scss/_basic.scss
@@ -21,3 +21,40 @@ body,
     height: 100vh;
     overflow: hidden;
 }
+
+// ======================================================
+// Scrollbar
+// ======================================================
+html {
+    scroll-behavior: smooth;
+}
+
+/* width */
+::-webkit-scrollbar {
+    width: 2px !important;
+    height: 3px !important;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 3px rgba(31, 0, 75, 0.05) !important;
+    border-radius: 25px !important;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: rgba(31, 0, 75, 0.01) !important;
+    border-radius: 3px !important;
+    height: 3vh !important;
+
+    width: 3px !important;
+    height: 3px !important;
+
+    max-width: 3px !important;
+    max-height: 3px !important;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #c7c3c3 !important;
+}
